--- a/build_config/CR9531.config
+++ b/build_config/CR9531.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Attitude Adjustment (unknown)
-# Fri Jun  3 04:32:16 2016
+# Fri Jun  3 06:16:51 2016
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -577,7 +577,7 @@ CONFIG_TARGET_INIT_SUPPRESS_STDERR=y
 CONFIG_VERSIONOPT=y
 CONFIG_VERSION_DIST="CR9531"
 CONFIG_VERSION_NICK="V1.0"
-CONFIG_VERSION_NUMBER="201606030319"
+CONFIG_VERSION_NUMBER="201606030433"
 CONFIG_VERSION_REPO="http://downloads.openwrt.org/attitude_adjustment/12.09-rc1/%S/packages"
 
 #
@@ -2408,11 +2408,8 @@ CONFIG_PACKAGE_iptables=y
 # CONFIG_PACKAGE_tinyproxy is not set
 # CONFIG_PACKAGE_transocks is not set
 # CONFIG_PACKAGE_tsocks is not set
-CONFIG_PACKAGE_uhttpd=y
+# CONFIG_PACKAGE_uhttpd is not set
 # CONFIG_PACKAGE_uhttpd_debug is not set
-# CONFIG_PACKAGE_uhttpd-mod-lua is not set
-# CONFIG_PACKAGE_uhttpd-mod-tls is not set
-# CONFIG_PACKAGE_uhttpd-mod-ubus is not set
 # CONFIG_PACKAGE_wccpd is not set
 
 #
